templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-app-service
  namespace: vault-app-dev
spec:
  selector:
    app: vault-app
  ports:
  - port: 80
    targetPort: 8200
    protocol: TCP
  type: ClusterIP
