templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress-service
  namespace: vault-app-dev
  labels:
    name: vault-ingress-service
spec:
  ingressClassName: nginx
  rules:
  - host: vault.techrite.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vault-app-service
            port: 
              number: 80
